--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,35 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
+	url = https://github.com/greta-dev/universe
 	shallow = true
 	branch = HEAD
+[submodule "greta"]
+	path = greta
+	url = https://github.com/greta-dev/greta
+	shallow = true
+	registered = true
+[submodule "greta.gp"]
+	path = greta.gp
+	url = https://github.com/greta-dev/greta.gp
+	shallow = true
+	registered = true
+[submodule "greta.dynamics"]
+	path = greta.dynamics
+	url = https://github.com/greta-dev/greta.dynamics
+	shallow = true
+	registered = true
+[submodule "greta.hmm"]
+	path = greta.hmm
+	url = https://github.com/greta-dev/greta.hmm
+	shallow = true
+	registered = true
+[submodule "greta.gam"]
+	path = greta.gam
+	url = https://github.com/greta-dev/greta.gam
+	shallow = true
+	registered = true
+[submodule "greta.multivariate"]
+	path = greta.multivariate
+	url = https://github.com/greta-dev/greta.multivariate
+	shallow = true
+	registered = true
